--- a/app/scripts/word/input/mwordInput.css
+++ b/app/scripts/word/input/mwordInput.css
@@ -11,11 +11,11 @@
   border: 0;
   width: 100%;
   height: 100%;
-  padding: 0 !important;
-  background-color: transparent;
+  padding: 3px !important;
+  background-color: #f1f1f1;
   cursor: vertical-text;
-  color: rgb(255,255,255);
   font-family: 'hawang';
+  font-size: 30px;
 }
 
 .wordinput-container-cell:focus {
